# muppet-rs

./: Cargo.toml  Makefile  README.md  build.rs  config.toml
src/: browser.rs  exfil.rs  guardrails.rs  main.rs  self_delete.rs  shortcut.rs
src/js/: .processed_credentials.js.kate-swp  credentials.js  guardrails.js  processed_credentials.js  processed_killdate.js
src/js/templates/: cookies.js  credentials.js  killdate.js
