[package]
name = "muppet"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
junction = "1.2.0"
async-std = "1.13.1"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", branch = "main"}
mslnk = "0.1.8"
selfdeletion = { git = "https://github.com/Pengrey/selfdeletion-rs.git", branch = "main" }

[features]
debug = []
