[package]
name = "muppet"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
futures = "0.3"
junction = "1.2.0"
windows = { version = "0.52.0", features = ["Win32_System_SystemInformation", "Win32_Foundation"] }
mslnk = "0.1.8"
tokio = { version = "1", features = ["full"] }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
selfdeletion = { git = "https://github.com/Pengrey/selfdeletion-rs.git", branch = "main" }
base64 = "0.22.1"
reqwest = { version = "0.12" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
random-string = "1.1.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[features]
debug = []
